Footer typo fixed.

--- a/404.html
+++ b/404.html
@@ -14,10 +14,10 @@
 
 <meta name="author" content="">
 
-<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?c=618bb6031f767d30ec0a30f841093e45ab5cdb51">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png?c=618bb6031f767d30ec0a30f841093e45ab5cdb51">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png?c=618bb6031f767d30ec0a30f841093e45ab5cdb51">
-<link rel="alternate" href="/index.xml?c=618bb6031f767d30ec0a30f841093e45ab5cdb51" type="application/rss+xml" title="RSS" />
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?c=25fd1a6c210648e3916b8dae89fa5550aeeb2a83">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png?c=25fd1a6c210648e3916b8dae89fa5550aeeb2a83">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png?c=25fd1a6c210648e3916b8dae89fa5550aeeb2a83">
+<link rel="alternate" href="/index.xml?c=25fd1a6c210648e3916b8dae89fa5550aeeb2a83" type="application/rss+xml" title="RSS" />
 <meta property="og:title" content="404 Page not found - 個人隨想">
 </meta>
 <meta property="og:url" content="https://cation234.github.io/404.html">
@@ -37,8 +37,8 @@
 <meta property="og:image" content="https://cation234.github.io//images/featured_image.jpg">
 
 
-<link rel="stylesheet" href="/css/main.css?c=618bb6031f767d30ec0a30f841093e45ab5cdb51">
-<link rel="stylesheet" href="/css/color.css?c=618bb6031f767d30ec0a30f841093e45ab5cdb51">
+<link rel="stylesheet" href="/css/main.css?c=25fd1a6c210648e3916b8dae89fa5550aeeb2a83">
+<link rel="stylesheet" href="/css/color.css?c=25fd1a6c210648e3916b8dae89fa5550aeeb2a83">
 
 
 
@@ -68,7 +68,7 @@ Page Not Found.
 	</div><div id="content-footer" class="sub">
   
   <div class="credit">
-    Power by <a href="https://gohugo.io">Hugo</a> /
+    Powered by <a href="https://gohugo.io">Hugo</a> /
     Theme <a href="https://github.com/michimani/simplog/">simplog</a> by <a href="https://github.com/michimani/">michimani</a>
   </div>
 </div></body>
